--- a/app/package.json
+++ b/app/package.json
@@ -8,12 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
+    "@ui-kitten/components": "^5.0.0",
     "expo": "~38.0.8",
+    "expo-location": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-maps": "0.27.1",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
