Show swipeable panel on marker press

--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@types/rn-swipeable-panel": "^1.1.0",
     "@ui-kitten/components": "^5.0.0",
     "expo": "~38.0.8",
     "expo-location": "~8.2.1",
@@ -18,7 +19,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-maps": "0.27.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "rn-swipeable-panel": "1.0.28"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
