--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,11 @@
     "@eva-design/eva": "^2.0.0",
     "@types/rn-swipeable-panel": "^1.1.0",
     "@ui-kitten/components": "^5.0.0",
+    "apollo-boost": "^0.4.9",
     "expo": "~38.0.8",
     "expo-location": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "graphql": "^15.3.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
