--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,6 @@
     "@types/rn-swipeable-panel": "^1.1.0",
     "@ui-kitten/components": "^5.0.0",
     "apollo-boost": "^0.4.9",
-    "eva-icons": "^1.1.3",
     "expo": "~38.0.8",
     "expo-location": "~8.2.1",
     "expo-status-bar": "^1.0.2",
@@ -20,8 +19,9 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
+    "react-native-eva-icons": "^1.3.1",
     "react-native-maps": "0.27.1",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
     "rn-swipeable-panel": "1.0.28"
   },
