--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.6.1",
+    "@react-navigation/stack": "^5.6.2",
     "@types/rn-swipeable-panel": "^1.1.0",
     "@ui-kitten/components": "^5.0.0",
     "apollo-boost": "^0.4.9",
@@ -20,7 +23,11 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-eva-icons": "^1.3.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.27.1",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
     "rn-swipeable-panel": "1.0.28"
