Add FB banner ad to PlacePanel when large

--- a/app/app.json
+++ b/app/app.json
@@ -6,6 +6,8 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "primaryColor": "#ffffff",
+    "facebookAppId": "923367898132562",
+    "facebookDisplayName": "COVID Tracker",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
