--- a/web/package.json
+++ b/web/package.json
@@ -6,13 +6,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-leaflet": "^2.5.2",
     "apollo-boost": "^0.4.9",
+    "bootstrap": "^4.5.0",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.4",
+    "leaflet": "^1.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-animate-height": "^2.0.22",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
+    "react-swipeable": "^5.5.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
