--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -20,7 +23,7 @@
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
     "react-swipeable": "^5.5.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.8"
   },
   "scripts": {
     "start": "react-scripts start",
