--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.4",
     "leaflet": "^1.6.0",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-animate-height": "^2.0.22",
