--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/react-leaflet": "^2.5.2",
     "apollo-boost": "^0.4.9",
     "bootstrap": "^4.5.0",
+    "gh-pages": "^3.1.0",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.4",
     "leaflet": "^1.6.0",
