--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
     "react-swipeable": "^5.5.1",
+    "react-textfit": "^1.1.0",
     "typescript": "~3.8"
   },
   "scripts": {
