--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "react-animate-height": "^2.0.22",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
     "react-swipeable": "^5.5.1",
