--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "csv-parse": "^4.11.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql-request": "2.1.0-next.1",
