Add support for moving to cities to search

--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-bootstrap-typeahead": "^3.4.6",
     "@types/react-dom": "^16.9.0",
     "@types/react-leaflet": "^2.5.2",
     "apollo-boost": "^0.4.9",
@@ -21,6 +22,7 @@
     "react": "^16.13.1",
     "react-animate-height": "^2.0.22",
     "react-bootstrap": "^1.2.2",
+    "react-bootstrap-typeahead": "^5.1.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-leaflet": "^2.7.0",
